Adding tags on swagger routes
